--- a/layout/products-2.html
+++ b/layout/products-2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-	<title> ПСК | Новости </title>
+	<head>
+	<title> ПСК | Продукция и услуги </title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,9 +47,9 @@
 
 </head>
 
-<body>
-	<div class="wrapper">
-		<header class="header header-white">
+	<body>
+		<div class="wrapper">
+			<header class="header header-white">
     <div class="header__top header-top">
         <div class="header-top__container">
             <a href="/" class="header-top__logo">
@@ -208,199 +208,187 @@
         </div>
     </nav>
 </header>
-		<main class="page">
-			<section class="page__main main">
-				<div class="main__container">
-					<div class="main__body main__body-md">
-						<ul class="main__navigation navigation">
-							<li class="navigation__item">
-								<a href="/" class="navigation__link">Главная</a>
-							</li>
-							<li class="navigation__item">
-								<a class="navigation__link active">Новости</a>
-							</li>
-						</ul>
-						<h1 class="main__title title-xl">
-							Новости
-						</h1>
+			<main class="page">
+				<section class="page__main main main-lg">
+					<div class="main__container">
+						<div class="main__body">
+							<ul class="main__navigation navigation">
+								<li class="navigation__item">
+									<a href="/" class="navigation__link">Главная</a>
+								</li>
+								<li class="navigation__item">
+									<a href="/production/" class="navigation__link">Продукция</a>
+								</li>
+								<li class="navigation__item">
+									<a class="navigation__link active">Анкерно-поддерживающая арматура СИП-1 и&nbsp;СИП-2</a>
+								</li>
+
+							</ul>
+							<h1 class="main__title title-xl">
+								Анкерно-поддержива<wbr>ющая арматура СИП-1 и&nbsp;СИП-2
+							</h1>
+						</div>
+					</div>
+				</section>
+				<div class="page__products products products-offset">
+					<div class="products__container">
+						<div class="products__wrapper">
+							<div class="products__menu" id="catalogue" data-da=".main__body, 767.98" data-spollers="767.98, max">
+								<div class="products__menu-title">
+									Категория
+								</div>
+								<button class="products__menu-btn spoller-caption" data-spoller="" tabindex="-1">
+									Анкерно-поддерживающая арматура СИП-1 и&nbsp;СИП-2
+								</button>
+								<div class="products__menu-content products-menu">
+									<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/" class="products-menu__item active">
+										<span class="products-menu__title">
+											Анкерно-поддержива<wbr>ющая арматура СИП-1 и&nbsp;СИП-2
+										</span>
+										<span class="products-menu__quantity">
+											(3)
+										</span>
+									</a>
+									<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_4/" class="products-menu__item">
+										<span class="products-menu__title">
+											Анкерно-поддерживающая группа СИП-4
+										</span>
+										<span class="products-menu__quantity">
+											(2)
+										</span>
+									</a>
+									<a href="/production/armatura/vspomogatelnaya_gruppa/" class="products-menu__item">
+										<span class="products-menu__title">
+											Вспомогательная арматура
+										</span>
+										<span class="products-menu__quantity">
+											(14)
+										</span>
+									</a>
+									<a href="/production/armatura/otvetvitelno_prokalivayushaya_gruppa/" class="products-menu__item">
+										<span class="products-menu__title">
+											Ответвительно-прокалывающая арматура
+										</span>
+										<span class="products-menu__quantity">
+											(8)
+										</span>
+									</a>
+									<a href="/production/armatura/soedinitelnaya_gruppa/" class="products-menu__item">
+										<span class="products-menu__title">
+											Соединительная арматура
+										</span>
+										<span class="products-menu__quantity">
+											(4)
+										</span>
+									</a>
+
+								</div>
+							</div>
+							<div class="products__body">
+								<form action="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/#catalogue" class="products__search search">
+									<div class="form__wrapper">
+										<input type="text" name="search" class="form__input search__input" placeholder="Поиск" value="">
+										<button type="button" class="form__input-clear icon-close"></button>
+									</div>
+									<button type="submit" class="search__btn btn btn-orange btn-sm icon-search"></button>
+								</form>
+								<div class="products__content">
+									<div class="products__content-header">
+										<div class="products__quantity">
+											Найдено 3 товара
+										</div>
+										<!-- <div class="products__sort dropdown">
+                                        <button class="dropdown__button" type="button">
+                                            По наименованию
+                                        </button>
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__list-item active" data-value="name">
+                                                По наименованию
+                                            </li>
+                                            <li class="dropdown__list-item" data-value="price">
+                                                По цене
+                                            </li>
+                                            <li class="dropdown__list-item" data-value="actual">
+                                                По популярности
+                                            </li>
+                                        </ul>
+                                        <input type="text" class="dropdown__input hidden" hidden name="sorting" value="name">
+                                    </div> -->
+									</div>
+									<div class="products__grid">
+										<div class="products__grid-item product">
+											<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/ankernie_zajimi_pa_1500_psk_pa_1500n_psk_dlya_04_kv/" class="product__image">
+												<picture>
+													<source srcset="" type="image/webp"><img src="/public/uploads/products/sip1sip2(2).jpg" alt="">
+												</picture>
+											</a>
+											<div class="product__desc">
+												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/ankernie_zajimi_pa_1500_psk_pa_1500n_psk_dlya_04_kv/" class="product__title">
+													Анкерные зажимы PA 1500-ПСК, PA 1500N-ПСК для 0,4 кВ
+												</a>
+												<div class="product__text">
+													Соответствуют ГОСТ Р 51177; СТО 34.01-2.2-002-2015
+												</div>
+												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/ankernie_zajimi_pa_1500_psk_pa_1500n_psk_dlya_04_kv/" class="product__link more-link">
+													Подробнее
+												</a>
+											</div>
+										</div>
+										<div class="products__grid-item product">
+											<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/komplekti_promejutochnoy_podveski_es_psk/" class="product__image">
+												<picture>
+													<source srcset="" type="image/webp"><img src="/public/uploads/products/b9828b180a84a5402068f2dd18389323.jpg" alt="">
+												</picture>
+											</a>
+											<div class="product__desc">
+												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/komplekti_promejutochnoy_podveski_es_psk/" class="product__title">
+													Комплекты промежуточной подвески ES-ПСК
+												</a>
+												<div class="product__text">
+													Соответствует&nbsp; ГОСТ Р 51177, СТО 34.01-2.2-002-2015
+												</div>
+												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/komplekti_promejutochnoy_podveski_es_psk/" class="product__link more-link">
+													Подробнее
+												</a>
+											</div>
+										</div>
+										<div class="products__grid-item product">
+											<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/podderjivayushiy_zajim_rs_1500_psk_dlya_04_kv/" class="product__image">
+												<picture>
+													<source srcset="" type="image/webp"><img src="/public/uploads/products/82d752697cb43afd65aaf7e99eff4ae5.png" alt="">
+												</picture>
+											</a>
+											<div class="product__desc">
+												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/podderjivayushiy_zajim_rs_1500_psk_dlya_04_kv/" class="product__title">
+													Поддерживающий зажим РS 1500-ПСК для 0,4 кВ
+												</a>
+												<div class="product__text">
+													Соответствует ГОСТ Р 51177, СТО 34.01-2.2-002-2015
+												</div>
+												<a href="/production/armatura/ankerno_podderjivayushaya_gruppa_sip_1_i_sip_2/podderjivayushiy_zajim_rs_1500_psk_dlya_04_kv/" class="product__link more-link">
+													Подробнее
+												</a>
+											</div>
+										</div>
+
+									</div>
+									<!--
+                                <div class="products__more">
+                                    <a href="" class="btn btn-blue btn-mw">
+                                        Загрузить еще
+                                    </a>
+                                </div>
+                            -->
+
+								</div>
+							</div>
+						</div>
+
+						<div class="products__article article__content"></div>
 					</div>
 				</div>
-				<canvas id="gradient-canvas" data-transition-in></canvas>
-			</section>
-			<div class="page__news news news-offset">
-				<div class="news__container">
-					<div class="news__main">
-						<div class="news__main-image">
-							<picture><source srcset="img/news/main.webp"type="image/webp"><img src="img/news/main.jpg" class="cover-image" alt="news pircture"></picture>
-						</div>
-						<div class="news__main-desc">
-							<h2 class="news__main-title title-lg">
-								Презентация нового бренда ПСК
-							</h2>
-							<div class="news__main-subtitle">
-								Профессионализм, скорость, качество – привычные принципы работы компании ПСК обрели новое звучание.
-							</div>
-							<span class="news__main-more more-link">Подробнее</span>
-						</div>
-						<a href="/article.html" class="news__main-link"></a>
-					</div>
-					<div class="news__items">
-						<div class="news__item">
-							<div class="news__item-body">
-								<h3 class="news__item-title title-md">
-									<a href="/article.html" class="news__item-link">
-										Постановка материалов для реконструкции
-									</a>
-								</h3>
-								<time datetime="2022-09-30" class="news__item-time">
-									30 сентября
-								</time>
-								<p class="news__item-text">
-									2022 год стал важным этапом в истории развития компании ПСК – из
-									компании-поставщика, имеющего положительную репутацию в энергетической отрасли, она
-									превратилась в производителя, который готов ставит.
-								</p>
-								<a href="/article.html" class="news__item-link more-link">
-									Подробнее
-								</a>
-							</div>
-							<a href="/article.html" class="news__item-image">
-								<picture><source srcset="img/news/01.webp"type="image/webp"><img src="img/news/01.jpg" class="cover-image" alt="news picture"></picture>
-							</a>
-						</div>
-						<div class="news__item" data-animation>
-							<div class="news__item-body">
-								<h3 class="news__item-title title-md">
-									<a href="/article.html" class="news__item-link">
-										Награждение по итогам года
-									</a>
-								</h3>
-								<time datetime="2022-01-25" class="news__item-time">
-									25 января
-								</time>
-								<p class="news__item-text">
-									По итогам работы 2021 года ООО “ПСК СтройИнвест” наградила 18 сотрудников компании
-									Благодарственными письмами, вскоре мы создадим заводы лучше прежних.
-								</p>
-								<a href="/article.html" class="news__item-link more-link">
-									Подробнее
-								</a>
-							</div>
-							<a href="/article.html" class="news__item-image">
-								<picture><source srcset="img/news/02.webp"type="image/webp"><img src="img/news/02.jpg" class="cover-image" alt="news picture"></picture>
-							</a>
-						</div>
-						<div class="news__item" data-animation>
-							<div class="news__item-body">
-								<h3 class="news__item-title title-md">
-									<a href="/article.html" class="news__item-link">
-										Поставка материалов для реконструкции <br>
-										ПС 110 кВ Учалы
-									</a>
-								</h3>
-								<time datetime="2021-11-19" class="news__item-time">
-									19 ноября 2021 г.
-								</time>
-								<p class="news__item-text">
-									ПСК СтройИнвест поставляет материалы для реконструкции ПС 110 кВ Учалы, для
-									электроснабжения объекта АО Учалинский ГОК в Республике Башкортостан.
-								</p>
-								<a href="/article.html" class="news__item-link more-link">
-									Подробнее
-								</a>
-							</div>
-							<a href="/article.html" class="news__item-image">
-								<picture><source srcset="img/news/03.webp"type="image/webp"><img src="img/news/03.jpg" class="cover-image" alt="news picture"></picture>
-							</a>
-						</div>
-						<div class="news__item" data-animation>
-							<div class="news__item-body">
-								<h3 class="news__item-title title-md">
-									<a href="/article.html" class="news__item-link">
-										Татарстанский международный форум по энергетике и энергоресурсоэффектив<wbr>ности
-									</a>
-								</h3>
-								<time datetime="2021-11-19" class="news__item-time">
-									19 ноября 2021 г.
-								</time>
-								<p class="news__item-text">
-									С 19 по 21 апреля в МВЦ "Казань Экспо" проходит Татарстанский международный форум по энергетике и энергоресурсоэффективности
-								</p>
-								<a href="/article.html" class="news__item-link more-link">
-									Подробнее
-								</a>
-							</div>
-							<a href="/article.html" class="news__item-image">
-								<picture><source srcset="img/news/04.webp"type="image/webp"><img src="img/news/04.jpg" class="cover-image" alt="news picture"></picture>
-							</a>
-						</div>
-						<div class="news__item" data-animation>
-							<div class="news__item-body">
-								<h3 class="news__item-title title-md">
-									<a href="/article.html" class="news__item-link">
-										Международный форум Kazan Digital Week – 2021
-									</a>
-								</h3>
-								<time datetime="2021-11-19" class="news__item-time">
-									19 ноября 2021 г.
-								</time>
-								<p class="news__item-text">
-									С 21 по 24 сентября 2021 года в столице Республики Татарстан г. Казани проходит Международный форум Kazan Digital Week – 2021.
-								</p>
-								<a href="/article.html" class="news__item-link more-link">
-									Подробнее
-								</a>
-							</div>
-							<a href="/article.html" class="news__item-image">
-								<picture><source srcset="img/news/05.webp"type="image/webp"><img src="img/news/05.jpg" class="cover-image" alt="news picture"></picture>
-							</a>
-						</div>
-						<div class="news__item" data-animation>
-							<div class="news__item-body">
-								<h3 class="news__item-title title-md">
-									<a href="/article.html" class="news__item-link">
-										С праздником Курбан-байрам!
-									</a>
-								</h3>
-								<time datetime="2021-11-19" class="news__item-time">
-									19 ноября 2021 г.
-								</time>
-								<p class="news__item-text">
-									ООО «ПСК СтройИнвест» поздравляет всех мусульман со священным праздником Курбан-байрам!
-								</p>
-								<a href="/article.html" class="news__item-link more-link">
-									Подробнее
-								</a>
-							</div>
-							<a href="/article.html" class="news__item-image">
-								<picture><source srcset="img/news/06.webp"type="image/webp"><img src="img/news/06.jpg" class="cover-image" alt="news picture"></picture>
-							</a>
-						</div>
-					</div>
-					<ul class="news__pagination pagination">
-						<li class="pagination__item pagination__item-left">
-							<a href="" aria-disabled="true" class="pagination__link icon-arrow"></a>
-						</li>
-						<li class="pagination__item">
-							<a href="" class="pagination__link active">01</a>
-						</li>
-						<li class="pagination__item">
-							<a href="" class="pagination__link">02</a>
-						</li>
-						<li class="pagination__item">
-							...
-						</li>
-						<li class="pagination__item">
-							<a href="" class="pagination__link">24</a>
-						</li>
-						<li class="pagination__item pagination__item-right">
-							<a href="" class="pagination__link icon-arrow"></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</main>
-		<footer class="footer">
+			</main>
+			<footer class="footer">
     <div class="footer__body footer-body">
         <div class="footer-body__container">
             <div class="footer-body__main">
@@ -531,8 +519,8 @@
         </div>
     </div>
 </footer>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231114222930"></script>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231114222930"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231114222930"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231114222930"></script>
@@ -542,6 +530,6 @@
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231114222930"></script>
 <script src="https://www.youtube.com/iframe_api?v2.18&_v=20231114222930"></script>
 <script src="js/app.min.js?_v=20231114222930"></script>
-</body>
+	</body>
 
 </html>
