--- a/layout/projects.html
+++ b/layout/projects.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231031172453">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20231031172453">
-	<link rel="stylesheet" href="css/style.min.css?_v=20231031172453">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231114222930">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20231114222930">
+	<link rel="stylesheet" href="css/style.min.css?_v=20231114222930">
 
 
 </head>
@@ -89,7 +89,8 @@
             <ul class="menu__list">
                 <li class="menu__item"><a href="/" class="menu__link ">ГЛАВНАЯ</a></li>
                 <li class="menu__item menu-parent">
-                    <a href="/about.html" class="menu__link icon-arrow  ">О КОМПАНИИ</a>
+                    <a href="/about.html" class="menu__link">О КОМПАНИИ</a>
+                    <button class="menu__arrow icon-arrow"></button>
                     <div class="submenu">
                         <ul class="submenu__list">
                             <li class="submenu__item">
@@ -136,7 +137,8 @@
                     </div>
                 </li>
                 <li class="menu__item menu-parent">
-                    <a href="" class="menu__link icon-arrow">АРМАТУРА ДЛЯ СИП</a>
+                    <a href="" class="menu__link">АРМАТУРА ДЛЯ СИП</a>
+                    <button class="menu__arrow icon-arrow"></button>
                     <div class="submenu">
                         <ul class="submenu__list">
                             <li class="submenu__item">
@@ -168,7 +170,8 @@
                     </div>
                 </li>
                 <li class="menu__item menu-parent">
-                    <a href="/complex.html" class="menu__link icon-arrow">КОМПЛЕКСНЫЕ ПОСТАВКИ</a>
+                    <a href="/complex.html" class="menu__link">КОМПЛЕКСНЫЕ ПОСТАВКИ</a>
+                    <button class="menu__arrow icon-arrow"></button>
                     <div class="submenu">
                         <ul class="submenu__list">
                             <li class="submenu__item">
@@ -412,16 +415,16 @@
     </div>
 </footer>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231031172453"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231031172453"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231114222930"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231114222930"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231031172453"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231031172453"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231031172453"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231031172453"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231031172453"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231031172453"></script>
-<script src="js/app.min.js?_v=20231031172453"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231114222930"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231114222930"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231114222930"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231114222930"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231114222930"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231114222930"></script>
+<script src="js/app.min.js?_v=20231114222930"></script>
 	</body>
 
 </html>
