--- a/src/site/templates/production/production__subcategory.htm
+++ b/src/site/templates/production/production__subcategory.htm
@@ -1,16 +1,13 @@
-<section id="lottie" class="page__main main">
+<section id="lottie" class="page__main main main-lg">
                 <div class="main__container">
-                    <div class="main__body main__body-md">
+                    <div class="main__body">
                         {{BREADCRUMBS}}
                         <h1 class="main__title title-xl">
                             {{TITLE}}
                         </h1>
-                        <div class="main__subtitle">
-                            {{SHORTDESCRIPTION}}
-                        </div>
+                        {{SHORTDESCRIPTION}}
                     </div>
                 </div>
-                <canvas id="gradient-canvas" data-transition-in></canvas>
             </section>
             <div class="page__products products products-offset">
                 <div class="products__container">
