--- a/src/site/templates/production/production.htm
+++ b/src/site/templates/production/production.htm
@@ -1,6 +1,6 @@
-<section class="page__main main">
+<section class="page__main main main-lg">
                 <div class="main__container">
-                    <div class="main__body main__body-md">
+                    <div class="main__body">
                         {{BREADCRUMBS}}
                         <h1 class="main__title title-xl">
                             {{TITLE}}
