--- a/src/site/templates/production/production__goody.htm
+++ b/src/site/templates/production/production__goody.htm
@@ -1,4 +1,4 @@
-<div id="lottie" class="page__main main">
+<div class="page__main main">
                 <div class="main__container">
                     <div class="main__body main__body-min">
                         {{BREADCRUMBS}}
@@ -25,7 +25,6 @@
                         </div>
                     </div>
                 </div>
-                <canvas id="gradient-canvas" data-transition-in></canvas>
             </div>
             <section class="page__current-product current-product">
                 <div class="current-product__container">
