--- a/src/site/templates/articles/articles.htm
+++ b/src/site/templates/articles/articles.htm
@@ -7,6 +7,7 @@
                         </h1>
                     </div>
                 </div>
+                <canvas id="gradient-canvas" data-transition-in></canvas>
             </section>
             <div class="page__news news {{CLASS}}">
                 <div class="news__container">
