--- a/src/site/templates/components/articles/bl-news-similar.htm
+++ b/src/site/templates/components/articles/bl-news-similar.htm
@@ -11,10 +11,13 @@
                     <div class="news__items">
                         {{LIST}}
                     </div>
+                    <!--
                     <div class="news__btn">
                         <a href="/articles/" class="btn btn-blue">
                             Смотреть все
                         </a>
                     </div>
+                -->
                 </div>
+                <div><br><br><br></div>
             </section>
